tests/stacks/ibm/application/tensorboard/test_data/expected/apps_v1_deployment_tensorboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tensorboard
    kustomize.component: tensorboard
  name: tensorboard
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      kustomize.component: tensorboard
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: tensorboard
        kustomize.component: tensorboard
    spec:
      containers:
      - args:
        - --logdir=logs
        - --port=6006
        command:
        - /usr/local/bin/tensorboard
        image: tensorflow/tensorflow:1.8.0
        imagePullPolicy: IfNotPresent
        name: tensorboard
        ports:
        - containerPort: 6006
        resources:
          limits:
            cpu: "4"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 1Gi
